@@ -26,7 +26,7 @@ include $(_cdbs_class_path)/autotools-files.mk$(_cdbs_makefile_suffix)
 
 # Overriden from makefile-vars.mk.  We pass CFLAGS and friends to ./configure, so
 # no need to pass them to make.
-DEB_MAKE_EXTRA_ARGS =
+DEB_MAKE_EXTRA_ARGS = $(DEB_MAKE_PARALLEL)
 
 common-configure-arch common-configure-indep:: common-configure-impl
 common-configure-impl:: $(DEB_BUILDDIR)/config.status
