@@ -32,4 +32,8 @@ endif
 CFLAGS += $(DEB_OPT_FLAG)
 CXXFLAGS += $(DEB_OPT_FLAG)
 
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	DEB_PARALLEL_JOBS := $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+endif
+
 endif
