@@ -24,7 +24,7 @@ _cdbs_class_qmake = 1
 
 include $(_cdbs_class_path)/makefile.mk$(_cdbs_makefile_suffix)
 
-DEB_MAKE_EXTRA_ARGS =
+DEB_MAKE_EXTRA_ARGS = $(DEB_MAKE_PARALLEL)
 
 DEB_MAKE_INSTALL_TARGET = install INSTALL_ROOT=$(DEB_DESTDIR)
 DEB_MAKE_CLEAN_TARGET = distclean
